workspace: watch kdeglobals and update Xwayland scale accordingly

The code assumed that KScreen would send KWin a new output configuration, and thus
Workspace::applyOutputConfiguration would run when the Xwayland scale setting is changed.

If you only change that setting and no other output setting though, that doesn't happen,
so until this setting is moved into the normal configuration mechanism, we have to update
the Xwayland scale when the config value in kdeglobals changes.

BUG: 499923
(cherry picked from commit 6913ab9e4f34a99cc1e07077a9d85feacc05dc10)