src/workspace.h
@@ -467,6 +467,7 @@ public:
      * instead of Platform::applyOutputChanges().
      */
     bool applyOutputConfiguration(const OutputConfiguration &config, const std::optional<QList<Output *>> &outputOrder = std::nullopt);
+    void updateXwaylandScale();
 
 public Q_SLOTS:
     void performWindowOperation(KWin::Window *window, Options::WindowOperation op);
@@ -762,6 +763,7 @@ private:
     std::unique_ptr<LidSwitchTracker> m_lidSwitchTracker;
     std::unique_ptr<OrientationSensor> m_orientationSensor;
     std::unique_ptr<DpmsInputEventFilter> m_dpmsFilter;
+    KConfigWatcher::Ptr m_kdeglobalsWatcher;
 
 private:
     friend bool performTransiencyCheck();
